# Neverdecel

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  snake.yml
docs/: ANALYTICS.md  ARCHITECTURE.md  AVA.md  PROJECT.md  VISITOR_TRACKING_RESEARCH.md
src/app/: __init__.py  config.py  main.py
src/app/analytics/: __init__.py  geo.py  middleware.py  parser.py  routes.py  storage.py
src/app/ava/: __init__.py  agent.py  prompts.py  security.py
src/app/middleware/: __init__.py  security.py
src/app/routes/: api.py  pages.py
src/static/css/: styles.css
src/static/js/: terminal.js
src/templates/: base.html  index.html
src/templates/admin/: analytics.html  login.html  visitor_detail.html  visitors.html
src/templates/components/: message.html  projects.html  repo_card.html  terminal.html
